# DFR-MoistureTracker

./: .gitignore  BATTERY_MONITOR.md  CLAUDE.md  CMakeLists.txt  CONFIG_PORTAL.md  DEVELOPER_GUIDE.md  DISPLAY.md  FACTORY_RESET.md  PARTITIONS.md  README.md  SOIL_MOISTURE_SETUP.md  WIFI_PROVISIONING.md  cleanup_credentials.sh  fresh_start.sh  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.defaults.zigbee  sdkconfig.dfrobot_firebeetle2_esp32c6  sdkconfig.dfrobot_firebeetle2_esp32c6_zigbee  sdkconfig.dfrobot_firebeetle2_esp32c6_zigbee_test  sdkconfig.esp32dev
.git.backup/: COMMIT_EDITMSG  ORIG_HEAD  index
.git.backup/logs/: HEAD
.git.backup/refs/heads/: main
.github/workflows/: release-ota.yml
docs/: ota-api-notes.md
docs/superpowers/plans/: 2026-05-28-sp1-zigbee-transport.md  (+4 more)
include/: adc_manager.h  battery_monitor.h  battery_soc.h  config_portal.h  display.h  display_assets.h  factory_reset.h  form_parser.h  fw_version.h  mqtt_credentials.h.example  mqtt_publisher.h  nvs_shim.h  ota_client.h  ota_ids.h  soil_calibration.h  soil_moisture.h  wifi_credentials.h  wifi_manager.h  wifi_provisioning.h  zigbee_encode.h  zigbee_reporter.h
ota/: index.json
src/: CMakeLists.txt  adc_manager.c  battery_monitor.c  config_portal.c  display.c  factory_reset.c  form_parser.c  idf_component.yml  main.c  mqtt_publisher.c  nvs_shim_esp.c  ota_client.c  soil_calibration.c  soil_moisture.c  wifi_credentials.c  wifi_manager.c  wifi_provisioning.c  zigbee_encode.c  zigbee_reporter.c
test/test_battery_monitor/: test_battery_monitor.c
test/test_calibration_fallback/: test_calibration_fallback.c
test/test_calibration_nvs/: CMakeLists.txt  test_calibration_nvs.c
test/test_display/: test_display.c
test/test_form_parser/: test_form_parser.c
test/test_ota_version/: test_ota_version.c
test/test_percentage_math/: test_percentage_math.c
test/test_smoke/: test_smoke.c
test/test_zigbee_encode/: test_zigbee_encode.c
tools/: gen_display_assets.py  make_ota_image.py  test_ota_tools.py  update_ota_index.py
z2m/: dfr_soil_moisture.js
(+9 files in other folders)
