idf_component_register(
    SRCS
        "adc_manager.c"
        "battery_monitor.c"
        "config_portal.c"
        "factory_reset.c"
        "form_parser.c"
        "main.c"
        "mqtt_publisher.c"
        "nvs_shim_esp.c"
        "soil_calibration.c"
        "soil_moisture.c"
        "wifi_credentials.c"
        "wifi_manager.c"
        "wifi_provisioning.c"
    INCLUDE_DIRS
        "."
        "../include"
)
